Bug 83312 - FILEOPEN: MS OpenXML strict charts color lost
Summary: FILEOPEN: MS OpenXML strict charts color lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.1.2 release
Hardware: All All
: high major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-31 20:09 UTC by Luke
Modified: 2014-09-05 15:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
multi color Chart saved as Strict Open XML (11.12 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-08-31 20:11 UTC, Luke
Details
multi color Chart saved as Transitional Open XML (11.01 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-08-31 20:12 UTC, Luke
Details
Docx multi color Chart saved as Strict Open XML (13.28 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-31 20:17 UTC, Luke
Details
Docx multi color Chart saved as Transitional Open XML (13.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-31 20:18 UTC, Luke
Details
PPTX multi color Chart saved as Strict Open XML (31.51 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2014-08-31 20:22 UTC, Luke
Details
Strict Docx file with many color issues for Final bug testing (688.13 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-31 20:25 UTC, Luke
Details
ChartColorStrict PDF in LibreOffice 4.4 (49.44 KB, application/pdf)
2014-09-01 00:10 UTC, Joel Madero
Details
Same File (ChartColorStrict) Opened in MSO2013 (105.92 KB, application/pdf)
2014-09-01 00:30 UTC, Joel Madero
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-08-31 20:09:03 UTC
Steps to reproduce

1. Create a multi-colum chart in Excel 2013.
2. Save as Strict Open XML
3. Open in LO 4.3+

Expect results:
Colors are the same in Excel and Calc

Actual Results:
Different Colors
Comment 1 Luke 2014-08-31 20:11:50 UTC
Created attachment 105505 [details]
multi color Chart saved as Strict Open XML
Comment 2 Luke 2014-08-31 20:12:19 UTC
Created attachment 105506 [details]
multi color Chart saved as Transitional Open XML
Comment 3 Luke 2014-08-31 20:17:44 UTC
Created attachment 105507 [details]
Docx multi color Chart saved as Strict Open XML
Comment 4 Luke 2014-08-31 20:18:25 UTC
Created attachment 105508 [details]
Docx multi color Chart saved as Transitional Open XML
Comment 5 Luke 2014-08-31 20:22:16 UTC
Created attachment 105509 [details]
PPTX multi color Chart saved as Strict Open XML
Comment 6 Luke 2014-08-31 20:25:38 UTC
Created attachment 105510 [details]
Strict Docx file with many color issues for Final bug testing
Comment 7 Joel Madero 2014-09-01 00:10:10 UTC
What I see opening the strit open XML file (first attachment)
Comment 8 Joel Madero 2014-09-01 00:10:34 UTC
Created attachment 105524 [details]
ChartColorStrict PDF in LibreOffice 4.4
Comment 9 Joel Madero 2014-09-01 00:30:47 UTC
Created attachment 105525 [details]
Same File (ChartColorStrict) Opened in MSO2013
Comment 10 Joel Madero 2014-09-01 00:34:11 UTC
Now this is confirmed. Bodhi 2.x (built on Ubuntu 12.04) w/ LibreOffice 4.4 built yesterday.


Prioritizing:
New
Major - for the end user this looks like a loss of data even if it's just that we haven't actually added the ability to read strict MSO format yet.
High - as more people start using newer versions of MSO and using "strict" format - we're going to see more and more cases like this.

@Markus and VMiklos - you were added because you worked on strict format support - either one of you interested in looking into this?
Comment 11 Commit Notification 2014-09-04 07:29:04 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=689742b9b75250fcebf50f0d9b73052d4b10e7e1

MSO finally decided to follow the spec, fdo#83312



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Luke 2014-09-04 21:36:57 UTC
Tested with the latest master 4.4 and the 4 OOXML test cases. All of the colors are now preserved. Thanks for all you've done. Beautiful work Markus!
Comment 13 Commit Notification 2014-09-05 15:36:19 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71d25406d9039633fea0bc07132ed180d8f661e6&h=libreoffice-4-3

MSO finally decided to follow the spec, fdo#83312


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.