MSO finally decided to follow the spec, fdo#83312

Change-Id: I8c611b49e3bf4645736425bd33c2994ae2c28337
Reviewed-on: https://gerrit.libreoffice.org/11270
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>